working on our story text for different screen sizes

--- a/wp-content/themes/texsite/js/navegationOrig.html
+++ b/wp-content/themes/texsite/js/navegationOrig.html
@@ -244,13 +244,13 @@
     <div class="row">
         <h2 class="our-title col-lg-12">The Original Texas Cheesesteak Est 1981</h2>
     </div>
-    <div class="row">
+    <div class="row our-text">
         <div class="col-lg-6 col-md-12 col-sm-12 text-box container">
             <h3>Our Story</h3>
             <p>It’s what we’ve been doing since 1981. We start with the highest quality, fresh ingredients. We make each
-                and every cheesesteak to order and top it with a signature sauce of your choice. All of our
+                and every cheesesteak to order and top it with a signature sauce of your choice. <span class="medium-screen">All of our
                 cheesesteaks, burgers, salads and deli-sandwiches are served with complimentary tortilla chips and fresh
-                salsa. It’s how our founder did it, it’s how we do it. It’s our passion.
+                    salsa. It’s how our founder did it, it’s how we do it. It’s our passion.</span>
 
                 <span class="large-screen">Our Humble Beginnings – When our founder arrived in Austin in 1981, he brought his love of a great
                 Philly cheesesteak, a local place where everyone is treated like family.  With a grill and a dream,
