do not show title on locations and menu page

--- a/wp-content/themes/texsite/js/navegationOrig.html
+++ b/wp-content/themes/texsite/js/navegationOrig.html
@@ -262,11 +262,15 @@
         <div class="col-sm-6" id="map"></div>
         <div class="col-sm-6">
 
-                <div id="search-area" class="row">
-                    <input type="search" class="fontAwesome input-search" name="search" id="search" placeholder="Name, City, State &#xf002;"/>
-                </div> <hr>
+            <div id="search-area" class="row">
+                <input type="search" class="fontAwesome input-search" name="search" id="search"
+                       placeholder="Name, City, State &#xf002;"/>
+            </div>
+            <hr>
+            <div class="container">
+                <div id="update" class="search-location"></div>
+            </div>
 
-            <div id="update" class="search-location"></div>
         </div>
     </div>
 </div>
