fixed overflow on locations

--- a/wp-content/themes/texsite/js/navegationOrig.html
+++ b/wp-content/themes/texsite/js/navegationOrig.html
@@ -267,7 +267,7 @@
                        placeholder="Name, City, State &#xf002;"/>
             </div>
             <hr>
-            <div class="container">
+            <div class="container-fluid">
                 <div id="update" class="search-location"></div>
             </div>
 
