--- a/wp-content/themes/texsite/js/navegationOrig.html
+++ b/wp-content/themes/texsite/js/navegationOrig.html
@@ -276,7 +276,7 @@
 </div>
 
 <!-- Modal -->
-<div id="locationbox">
+<div id="locationbox" class="location-modal">
     <div id="locationInfo"></div>
 </div>
 
@@ -288,7 +288,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">menu {{name}}</h4>
+                    <h4 class="modal-title">menu {{name}} <a href="#"><i class="fa fa-print" aria-hidden="true"></i></a></h4>
                 </div>
                 <div class="modal-body">
                     <p>{{address}}</p>
