--- a/wp-content/themes/texsite/js/navegationOrig.html
+++ b/wp-content/themes/texsite/js/navegationOrig.html
@@ -407,3 +407,6 @@
 </div>
 
 <!--////-->
+
+<h3 style="text-align: center"><span style="font-family: mrs-eaves">GIVE US A TRY</span></h3>
+<p style="text-align: right; font-size: .5em"></p>
