getting ready to upload to hosting

--- a/wp-content/themes/texsite/js/navegationOrig.html
+++ b/wp-content/themes/texsite/js/navegationOrig.html
@@ -377,3 +377,159 @@
 </div>
 
 <!--end scroll fire our story-->
+
+<!--Contact Us-->
+<div class="contact-us container">
+
+    <ul class="nav nav-tabs">
+        <li class="active"><a data-toggle="tab" href="#feedback-form">Feedback</a></li>
+        <li><a data-toggle="tab" href="#franchising-form">Franchising</a></li>
+    </ul>
+
+    <div class="tab-content">
+        <div id="feedback-form" class="tab-pane fade in active">
+            <p class="feed-text">Thank you for your feedback</p>
+            <form>
+                <!--location visited-->
+                <div class="form-group">
+                    <label for="sel1">Location Visited:</label>
+                    <select class="form-control" id="sel1">
+                        <option value='1'>Choose your location</option>
+                        <option value='18'>Frisco Warren Parkway</option>
+                        <option value='19'>Las Colinas</option>
+                        <option value='20'>Old Town</option>
+                        <option value='21'>Plano</option>
+                        <option value='23'>Richardson</option>
+                        <option value='22'>UTA</option>
+                        <option value='13'>Great Hills</option>
+                        <option value='14'>Lakeline</option>
+                        <option value='15'>Moonlight Place</option>
+                        <option value='16'>Sunset Valley</option>
+                        <option value='11'>Laredo</option>
+                        <option value='10'>McAllen</option>
+                        <option value='24'>Oklahoma</option>
+                    </select>
+
+                    <div class="form-group row">
+
+                        <!--date of visit-->
+                        <div class="col-sm-6">
+                            <label for="date-visit">Date of Visit:</label>
+                            <input type="date" class="form-control" id="date-visit">
+                        </div>
+                        <!--time of visit-->
+                        <div class="col-sm-6">
+                            <label for="time-visit">Time of Visit:</label>
+                            <input type="time" class="form-control" id="time-visit">
+                        </div>
+
+                    </div>
+
+                    <div class="form-group row">
+
+                        <!--name-->
+                        <div class="col-sm-6">
+                            <label for="first-name">First Name:</label>
+                            <input type="text" class="form-control" id="first-name">
+                        </div>
+
+                        <!--last name-->
+                        <div class="col-sm-6">
+                            <label for="last-name">Last Name:</label>
+                            <input type="text" class="form-control" id="last-name">
+                        </div>
+
+                    </div>
+
+                    <div class="form-group row">
+
+                        <!--email-->
+                        <div class="col-sm-6">
+                            <label for="email">email:</label>
+                            <input type="email" class="form-control" id="email">
+                        </div>
+                        <!--phone number-->
+                        <div class="col-sm-6">
+                            <label for="phone">Phone Number:</label>
+                            <input type="tel" class="form-control" id="phone">
+                        </div>
+
+                    </div>
+
+                    <!--Comment-->
+                    <label for="comment">Comment:</label>
+                    <textarea class="form-control" rows="5" id="comment"></textarea>
+                </div>
+            </form>
+
+            <button type="submit" class="btn btn-default">Submit</button>
+
+        </div>
+
+        <div id="franchising-form" class="tab-pane fade">
+            <form>
+
+                <div class="form-group">
+
+                    <div class="form-group row">
+
+                        <!--name-->
+                        <div class="col-sm-6">
+                            <label for="fran-name">First Name:</label>
+                            <input type="text" class="form-control" id="fran-name">
+                        </div>
+
+                        <!--last name-->
+                        <div class="col-sm-6">
+                            <label for="fran-last">Last Name:</label>
+                            <input type="text" class="form-control" id="fran-last">
+                        </div>
+
+                    </div>
+
+                    <div class="form-group row">
+
+                        <!--email-->
+                        <div class="col-sm-6">
+                            <label for="fran-email">email:</label>
+                            <input type="email" class="form-control" id="fran-email">
+                        </div>
+                        <!--phone number-->
+                        <div class="col-sm-6">
+                            <label for="fran-phone">Phone Number:</label>
+                            <input type="tel" class="form-control" id="fran-phone">
+                        </div>
+
+                    </div>
+
+                    <div class="form-group row">
+
+                        <!--city-->
+                        <div class="col-sm-4">
+                            <label for="fran-city">email:</label>
+                            <input type="email" class="form-control" id="fran-city">
+                        </div>
+                        <!--state-->
+                        <div class="col-sm-4">
+                            <label for="fran-state">Phone Number:</label>
+                            <input type="tel" class="form-control" id="fran-state">
+                        </div>
+                        <!--zip code-->
+                        <div class="col-sm-4">
+                            <label for="fran-zip">Postal Code:</label>
+                            <input type="text" pattern="[0-9]{5}" class="form-control" id="fran-zip">
+                        </div>
+
+                    </div>
+
+                    <!--Comment-->
+                    <label for="fran-comment">Message:</label>
+                    <textarea class="form-control" rows="5" id="fran-comment"></textarea>
+                </div>
+            </form>
+
+            <button type="submit" class="btn btn-default">Submit</button>
+        </div>
+        </div>
+    </div>
+<!--end Contact Us-->
